--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#server.port = 8082
+server.port = 8080
 logging.level.org.springframework = WARN
 logging.level.org.hibernate = WARN
 logging.level.com.springsecurity.demo = DEBUG
-#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/Hotel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoreconnect=true
 spring.datasource.username=root
 spring.datasource.password=@vickymysql
@@ -10,15 +10,15 @@ spring.datasource.password=@vickymysql
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
 ###### JPA Properties ######
-#spring.jpa.generate-ddl = true
+spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 
 ###### Email Properties ######
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.username = example@gmail.com
-spring.mail.password = examplepassword
+spring.mail.username = evans.javabeans@gmail.com
+spring.mail.password = javabeans
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
