--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-<!--        <dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-samples-javaconfig-messages -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-samples-javaconfig-messages</artifactId>
+            <version>4.2.0.RELEASE</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>org.hibernate</groupId>-->
 <!--            <artifactId>hibernate-core</artifactId>-->
 <!--            <version>4.1.4.Final</version>-->
