--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@ server.port = 8080
 logging.level.org.springframework = WARN
 logging.level.org.hibernate = WARN
 logging.level.com.springsecurity.demo = DEBUG
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/Hotel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoreconnect=true
 spring.datasource.username=root
-spring.datasource.password=@vickymysql
-
+spring.datasource.password=beholdmypass
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
 ###### JPA Properties ######
@@ -14,13 +13,19 @@ spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 
 ###### Email Properties ######
+#FOR WINDOWS -> DISABLE FIREWALL
 spring.mail.host = smtp.gmail.com
-spring.mail.port = 587
+spring.mail.protocol=smtps
+spring.mail.port = 465
+spring.mail.properties.mail.transport.protocol=smtps
+spring.mail.properties.mail.smtps.auth=true
+spring.mail.properties.mail.smtps.starttls.enable=true
+spring.mail.properties.mail.smtps.timeout=8000
+
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.username = evans.javabeans@gmail.com
 spring.mail.password = javabeans
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
-spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
