--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8080
 logging.level.org.springframework = WARN
 logging.level.org.hibernate = WARN
 logging.level.com.springsecurity.demo = DEBUG
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/Hotel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoreconnect=true
 spring.datasource.username=root
 spring.datasource.password=beholdmypass
