Add room functionality ready

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,12 @@ spring.jpa.show-sql = true
 ###### Email Properties ######
 #FOR WINDOWS -> DISABLE FIREWALL
 spring.mail.host = smtp.gmail.com
-spring.mail.protocol=smtps
-spring.mail.port = 465
-spring.mail.properties.mail.transport.protocol=smtps
-spring.mail.properties.mail.smtps.auth=true
-spring.mail.properties.mail.smtps.starttls.enable=true
-spring.mail.properties.mail.smtps.timeout=8000
+#spring.mail.protocol=smtps
+spring.mail.port = 587
+#spring.mail.properties.mail.transport.protocol=smtps
+#spring.mail.properties.mail.smtps.auth=true
+#spring.mail.properties.mail.smtps.starttls.enable=true
+#spring.mail.properties.mail.smtps.timeout=8000
 
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.username = evans.javabeans@gmail.com
